fixed width of buttons on map on mobile

--- a/app/assets/stylesheets/components-vue/_map.scss
+++ b/app/assets/stylesheets/components-vue/_map.scss
@@ -75,8 +75,16 @@
 
         @include breakpoint($medium) {
           font-size: $button-font-size-small;
-          width: rem-calc(125);
+          width: rem-calc(120);
         }
+      }
+    }
+
+    .button--grey {
+      width: rem-calc(130);
+
+      @include breakpoint($small) {
+        width: rem-calc(150);
       }
     }
 
